--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,1 @@
-annotated-types==0.6.0
-anyio==4.3.0
-arrow==1.3.0
-autopep8==2.0.4
-binaryornot==0.4.4
-certifi==2024.2.2
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-cookiecutter==2.6.0
-exceptiongroup==1.2.0
-fastapi==0.110.0
-flake8==7.0.0
-flet==0.21.1
-flet-core==0.21.1
-flet-runtime==0.21.1
-h11==0.14.0
-httpcore==1.0.4
-httptools==0.6.1
-httpx==0.27.0
-idna==3.6
-isort==5.13.2
-Jinja2==3.1.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mccabe==0.7.0
-mdurl==0.1.2
-oauthlib==3.2.2
-packaging==23.2
-pycodestyle==2.11.1
-pydantic==2.6.4
-pydantic_core==2.16.3
-pyflakes==3.2.0
-Pygments==2.17.2
-pypng==0.20220715.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-slugify==8.0.4
-PyYAML==6.0.1
-qrcode==7.4.2
-repath==0.9.0
-requests==2.31.0
-rich==13.7.1
-six==1.16.0
-sniffio==1.3.1
-starlette==0.36.3
-text-unidecode==1.3
-tomli==2.0.1
-types-python-dateutil==2.9.0.20240316
-typing_extensions==4.10.0
-urllib3==2.2.1
-uvicorn==0.28.0
-uvloop==0.19.0
-watchdog==4.0.0
-watchfiles==0.21.0
-websockets==12.0
+flet --pre
